--- a/index.html
+++ b/index.html
@@ -41,50 +41,55 @@
     <script type="text/babel">
       console.log('야옹');
 
-      const title = <h1>1번째 고양이 가라사대</h1>;
+      const Title = (props) => {
+        return <h1>{props.children}</h1>;
+      };
 
-      const form = (
-        <form>
-          <input
-            type="text"
-            name="name"
-            placeholder="영어 대사를 입력해주세요"
-          />
-          <button type="submit">생성</button>
-        </form>
-      );
+      const Form = () => {
+        return (
+          <form>
+            <input
+              type="text"
+              name="name"
+              placeholder="영어 대사를 입력해주세요"
+            />
+            <button type="submit">생성</button>
+          </form>
+        );
+      };
 
-      const mainCard = (
-        <div class="main-card">
-          <img
-            src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
-            alt="고양이"
-            width="400"
-          />
-          <button>🤍</button>
-        </div>
-      );
+      const MainCard = (props) => {
+        return (
+          <div class="main-card">
+            <img src={props.img} alt="고양이" width="400" />
+            <button>🤍</button>
+          </div>
+        );
+      };
 
-      const catItem = (
-        <li>
-          <img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" />
-        </li>
-      );
+      const CatItem = (props) => {
+        return (
+          <li>
+            <img src={props.img} />
+          </li>
+        );
+      };
 
-      const favorites = (
-        <ul class="favorites">
-          {catItem}
-          {catItem}
-          {catItem}
-        </ul>
-      );
+      const Favorites = () => {
+        return (
+          <ul class="favorites">
+            <CatItem img="https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn" />
+            <CatItem img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
+          </ul>
+        );
+      };
 
       const app = (
         <div>
-          {title}
-          {form}
-          {mainCard}
-          {favorites}
+          <Title>1번째 고양이 가라사대</Title>
+          <Form />
+          <MainCard img="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" />
+          <Favorites />
         </div>
       );
 
