fix: class를 className으로 수정

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       const MainCard = (props) => {
         return (
-          <div class="main-card">
+          <div className="main-card">
             <img src={props.img} alt="고양이" width="400" />
             <button>🤍</button>
           </div>
@@ -77,7 +77,7 @@
 
       const Favorites = () => {
         return (
-          <ul class="favorites">
+          <ul className="favorites">
             <CatItem img="https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn" />
             <CatItem img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
           </ul>
