--- a/index.html
+++ b/index.html
@@ -97,18 +97,24 @@
       };
 
       const App = () => {
+        const CAT1 = 'https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react';
+        const CAT2 = 'https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn';
+        const CAT3 = 'https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript';
+
         const [counter, setCounter] = React.useState(1);
+        const [mainImage, setMainImage] = React.useState(CAT1);
 
         const handleFormSubmit = (event) => {
           event.preventDefault();
           setCounter(counter + 1);
+          setMainImage(CAT2);
         };
 
         return (
           <div>
             <Title>{counter}번째 고양이 가라사대</Title>
             <Form handleFormSubmit={handleFormSubmit} />
-            <MainCard img="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" />
+            <MainCard img={mainImage} />
             <Favorites />
           </div>
         );
