--- a/index.html
+++ b/index.html
@@ -59,22 +59,10 @@
       };
 
       const MainCard = (props) => {
-        const handleHeartClick = () => {
-          console.log('하트 눌렀음');
-        };
-        const handleHeartMouseOver = () => {
-          console.log('하트 스쳐지나감');
-        };
-
         return (
           <div className="main-card">
             <img src={props.img} alt="고양이" width="400" />
-            <button
-              onClick={handleHeartClick}
-              onMouseOver={handleHeartMouseOver}
-            >
-              🤍
-            </button>
+            <button onClick={props.handleHeartClick}>🤍</button>
           </div>
         );
       };
@@ -87,16 +75,10 @@
         );
       };
 
-      const Favorites = () => {
-        const CAT1 = 'https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react';
-        const CAT2 = 'https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn';
-        const CAT3 = 'https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript';
-
-        const cats = [CAT1, CAT2, CAT3];
-
+      const Favorites = (props) => {
         return (
           <ul className="favorites">
-            {cats.map((cat) => {
+            {props.favorties.map((cat) => {
               return <CatItem img={cat} key={cat} />;
             })}
           </ul>
@@ -110,6 +92,7 @@
 
         const [counter, setCounter] = React.useState(1);
         const [mainImage, setMainImage] = React.useState(CAT1);
+        const [favorties, setFavorites] = React.useState([CAT1, CAT2]);
 
         const handleFormSubmit = (event) => {
           event.preventDefault();
@@ -117,12 +100,17 @@
           setMainImage(CAT2);
         };
 
+        const handleHeartClick = () => {
+          console.log('하트 눌렀음');
+          setFavorites([...favorties, CAT3]);
+        };
+
         return (
           <div>
             <Title>{counter}번째 고양이 가라사대</Title>
             <Form handleFormSubmit={handleFormSubmit} />
-            <MainCard img={mainImage} />
-            <Favorites />
+            <MainCard img={mainImage} handleHeartClick={handleHeartClick} />
+            <Favorites favorties={favorties} />
           </div>
         );
       };
