--- a/index.html
+++ b/index.html
@@ -45,15 +45,32 @@
         return <h1>{props.children}</h1>;
       };
 
-      const Form = (props) => {
+      const Form = () => {
+        const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
         const [value, setValue] = React.useState('');
+        const [errorMessage, setErrorMessage] = React.useState('');
 
         const handleInputChange = (event) => {
-          setValue(event.target.value.toUpperCase());
+          const userValue = event.target.value;
+          setErrorMessage('');
+
+          if (includesHangul(userValue)) {
+            setErrorMessage('한글은 입력할 수 없습니다.');
+          }
+          setValue(userValue.toUpperCase());
+        };
+
+        const handleFormSubmit = (event) => {
+          event.preventDefault();
+          setErrorMessage('');
+
+          if (value.trim() === '') {
+            setErrorMessage('빈 값으로 만들 수 없습니다.');
+          }
         };
 
         return (
-          <form onSubmit={props.handleFormSubmit}>
+          <form onSubmit={handleFormSubmit}>
             <input
               type="text"
               name="name"
@@ -62,6 +79,7 @@
               onChange={handleInputChange}
             />
             <button type="submit">생성</button>
+            <p style={{ color: 'red' }}>{errorMessage}</p>
           </form>
         );
       };
