--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         return <h1>{props.children}</h1>;
       };
 
-      const Form = () => {
+      const Form = (props) => {
         const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
         const [value, setValue] = React.useState('');
         const [errorMessage, setErrorMessage] = React.useState('');
@@ -64,7 +64,9 @@
 
           if (value.trim() === '') {
             setErrorMessage('빈 값으로 만들 수 없습니다.');
+            return;
           }
+          props.updateMainImage();
         };
 
         return (
@@ -86,7 +88,7 @@
         return (
           <div className="main-card">
             <img src={props.img} alt="고양이" width="400" />
-            <button onClick={props.handleHeartClick}>🤍</button>
+            <button onClick={props.onHeartClick}>🤍</button>
           </div>
         );
       };
@@ -118,10 +120,9 @@
         const [mainImage, setMainImage] = React.useState(CAT1);
         const [favorties, setFavorites] = React.useState([CAT1, CAT2]);
 
-        const handleFormSubmit = (event) => {
-          event.preventDefault();
-          setCounter(counter + 1);
+        const updateMainImage = () => {
           setMainImage(CAT2);
+          setCounter(counter + 1);
         };
 
         const handleHeartClick = () => {
@@ -131,8 +132,8 @@
         return (
           <div>
             <Title>{counter}번째 고양이 가라사대</Title>
-            <Form handleFormSubmit={handleFormSubmit} />
-            <MainCard img={mainImage} handleHeartClick={handleHeartClick} />
+            <Form updateMainImage={updateMainImage} />
+            <MainCard img={mainImage} onHeartClick={handleHeartClick} />
             <Favorites favorties={favorties} />
           </div>
         );
