--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script type="text/babel">
+      const jsonLocalStorage = {
+        setItem: (key, value) => {
+          localStorage.setItem(key, JSON.stringify(value));
+        },
+        getItem: (key) => {
+          return JSON.parse(localStorage.getItem(key));
+        },
+      };
+
       const Title = (props) => {
         return <h1>{props.children}</h1>;
       };
@@ -117,20 +126,24 @@
         const CAT3 = 'https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript';
 
         const [counter, setCounter] = React.useState(
-          Number(localStorage.getItem('counter'))
+          jsonLocalStorage.getItem('counter') || 1
         );
         const [mainImage, setMainImage] = React.useState(CAT1);
-        const [favorties, seFavorites] = React.useState([CAT1, CAT2]);
+        const [favorties, setFavorites] = React.useState(
+          jsonLocalStorage.getItem('favorites') || []
+        );
 
         const updateMainImage = () => {
           setMainImage(CAT2);
           const nextCounter = counter + 1;
           setCounter(nextCounter);
-          localStorage.setItem('counter', nextCounter);
+          jsonLocalStorage.setItem('counter', nextCounter);
         };
 
         const handleHeartClick = () => {
-          setFavorites([...favorties, CAT3]);
+          const nextFavorties = [...favorties, mainImage];
+          setFavorites(nextFavorties);
+          jsonLocalStorage.setItem('favorites', nextFavorties);
         };
 
         return (
