fix: key가 중복되지 않도록 랜덤 숫자 부여

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         return (
           <ul className="favorites">
             {props.favorties.map((cat) => {
-              return <CatItem img={cat} key={cat} />;
+              return <CatItem img={cat} key={Math.random()} />;
             })}
           </ul>
         );
