--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
         const CAT2 = 'https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn';
         const CAT3 = 'https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript';
 
-        const [counter, setCounter] = React.useState(
-          jsonLocalStorage.getItem('counter')
-        );
+        const [counter, setCounter] = React.useState(() => {
+          return jsonLocalStorage.getItem('counter');
+        });
         const [mainImage, setMainImage] = React.useState(CAT1);
-        const [favorties, setFavorites] = React.useState(
-          jsonLocalStorage.getItem('favorites') || []
-        );
+        const [favorties, setFavorites] = React.useState(() => {
+          return jsonLocalStorage.getItem('favorites') || [];
+        });
 
         const alreadyFavorite = favorties.includes(mainImage);
 
